--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".feature.home.activity.HomeActivity"></activity>
-        <activity android:name=".feature.auth.activity.LoginActivity"></activity>
-        <activity android:name=".feature.auth.activity.RegisterActivity"></activity>
-
+        <activity android:name=".feature.home.activity.DetailBookActivity"></activity>
+        <activity android:name=".feature.home.activity.HomeActivity" />
+        <activity android:name=".feature.auth.activity.LoginActivity" />
+        <activity android:name=".feature.auth.activity.RegisterActivity" />
         <activity android:name=".feature.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
