--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,9 @@ dependencies {
     def lifecycle_version = "2.0.0"
 
     def moshiVersion = "1.8.0"
-    def retrofit2_version = "2.5.0"
-    def okhttp3_version = "3.12.0"
-    def kotlinCoroutineVersion = "1.1.1"
+    def retrofit2_version = "2.6.0"
+    def okhttp3_version = "4.0.0-RC1"
+    def kotlinCoroutineVersion = "1.3.0-M1"
     def picassoVersion = "2.71828"
 
     def junitVersion = "4.12"
@@ -69,12 +69,12 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
-    implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
     implementation "com.wajahatkarim3.easyvalidation:easyvalidation-core:1.0.1"
 
     //Moshi
@@ -102,8 +102,8 @@ dependencies {
 
 
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Dependencies for local unit tests
     testImplementation "junit:junit:$junitVersion"
